--- a/io_prj_server/public/stylesheets/login-style.css
+++ b/io_prj_server/public/stylesheets/login-style.css
@@ -1,8 +1,15 @@
-/* Panel logowania */
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background: #ffffff;
+}
+
 .login-panel {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 75vh;
     background: #FFFFFF;
     display: flex;
     justify-content: center;
@@ -72,4 +79,53 @@
     color: red;
     margin-bottom: 10px;
     text-align: center;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 40px;
+  background-color: #f4f4f4;
+}
+
+#brand h1 {
+  font-size: 48px;
+  color: #007bff;
+  font-family: 'Trebuchet MS', sans-serif;
+  margin: 0;
+}
+
+#brand a{
+  text-decoration: none;
+  color: inherit;
+}
+
+nav ul li {
+  padding: 0 10px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 14px;
+}
+
+nav ul li a.blue-button {
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+}
+
+nav ul li a.blue-button:hover {
+  background-color: #0056b3;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
