--- a/io_prj_server/views/login.ejs
+++ b/io_prj_server/views/login.ejs
@@ -7,25 +7,35 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel='stylesheet' href='/stylesheets/login-style.css' />
     <script type="module" src="/javascripts/refresh_jwt.js"></script>
+    <script type="module" src="/javascripts/login.js"></script>
 </head>
 
 <body>
+    <header>
+        <div id="brand">
+          <h1><a href="/">MatchMates</a></h1>
+        </div>
+        <nav>
+            <ul>
+                <li> <a href="/user/register" class="blue-button">Zarejestruj się</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="login-panel">
         <div class="login-form">
             <% if (typeof error !=='undefined' ) { %>
                 <div class="error-message">
                     <%= error %>
                 </div>
-                <% } %>
-                    <form method="POST" action="/user/login">
-                        <div class="input-wrapper">
-                            <input type="email" id="email" name="email" placeholder="E-mail" required>
-                        </div>
-                        <div class="input-wrapper">
-                            <input type="password" id="pass" name="pass" placeholder="Hasło" required>
-                        </div>
-                        <button type="submit" class="login-button">Zaloguj</button>
-                    </form>
+            <% } %>
+            <div id="error-message" class="error-message" style="display: none;"></div>
+            <div class="input-wrapper">
+                <input type="email" id="email" name="email" placeholder="E-mail" required>
+            </div>
+            <div class="input-wrapper">
+                <input type="password" id="pass" name="pass" placeholder="Hasło" required>
+            </div>
+            <button id="login-button" class="login-button">Zaloguj</button>
         </div>
     </div>
 </body>
