added form to join project

--- a/io_prj_server/public/stylesheets/style.css
+++ b/io_prj_server/public/stylesheets/style.css
@@ -72,6 +72,9 @@ main {
   margin-bottom: 20px;
   border: solid;
   border-color: #e6e6e6;
+  word-wrap: break-word; 
+ overflow-wrap: break-word; 
+white-space: normal; 
  
 }
 
