miejsce na powiadomienai

--- a/io_prj_server/views/about.ejs
+++ b/io_prj_server/views/about.ejs
@@ -47,6 +47,7 @@
             </p>
         </section>
     </main>
+    <div id="notifications-container" style="display: none;"></div>
 
 </body>
 
