--- a/io_prj_server/views/followed_projects.ejs
+++ b/io_prj_server/views/followed_projects.ejs
@@ -97,6 +97,7 @@
             </ul>
           </div>
         </aside>
+        <div id="notifications-container" style="display: none;"></div>
       </main>
 </body>
 
