--- a/io_prj_server/views/frontpage.ejs
+++ b/io_prj_server/views/frontpage.ejs
@@ -51,6 +51,7 @@
         </section>
         <aside>
         </aside>
+        <div id="notifications-container" style="display: none;"></div>
       </main>
 </body>
 
