--- a/io_prj_server/views/profile.ejs
+++ b/io_prj_server/views/profile.ejs
@@ -66,6 +66,7 @@
           <aside>
               <div class="sidebar-placeholder"></div>
           </aside>
+          <div id="notifications-container" style="display: none;"></div>
       </div>
   </main>
 </body>      
