--- a/io_prj_server/views/faq.ejs
+++ b/io_prj_server/views/faq.ejs
@@ -70,6 +70,7 @@
             <a href="/send" class="blue-button">Wyślij</a>
         </section>
     </main>
+    <div id="notifications-container" style="display: none;"></div>
 </body>
 
 </html>
