--- a/io_prj_server/views/notification.ejs
+++ b/io_prj_server/views/notification.ejs
@@ -1,6 +1,6 @@
 <div class="notification">
-    <p>Tutaj będzie tekst powiadomienia</p>
-    <button>Przeczytane</button>
+    <p id="notification-text">tekst powiadomienia</p>
+    <button>Więcej...</button>
 </div>
 
 <style>
