--- a/io_prj_server/views/faq.ejs
+++ b/io_prj_server/views/faq.ejs
@@ -70,7 +70,7 @@
             <a href="/send" class="blue-button">Wyślij</a>
         </section>
     </main>
-    <div id="notifications-container" style="display: none;"></div>
+    <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
 </body>
 
 </html>
