--- a/io_prj_server/views/followed_projects.ejs
+++ b/io_prj_server/views/followed_projects.ejs
@@ -97,7 +97,7 @@
             </ul>
           </div>
         </aside>
-        <div id="notifications-container" style="display: none;"></div>
+        <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
       </main>
 </body>
 
