--- a/io_prj_server/views/about.ejs
+++ b/io_prj_server/views/about.ejs
@@ -47,7 +47,7 @@
             </p>
         </section>
     </main>
-    <div id="notifications-container" style="display: none;"></div>
+    <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
 
 </body>
 
