--- a/io_prj_server/views/my_projects.ejs
+++ b/io_prj_server/views/my_projects.ejs
@@ -51,7 +51,7 @@
         </section>
         <aside>
         </aside>
-        <div id="notifications-container" style="display: none;"></div>
+        <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
       </main>
 </body>
 
