--- a/io_prj_server/views/project_view.ejs
+++ b/io_prj_server/views/project_view.ejs
@@ -183,7 +183,7 @@
       </div>
     <% }) %>
   </div>
-  <div id="notifications-container" style="display: none;"></div>
+  <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
 </body>
 
 </html>
