--- a/io_prj_server/views/frontpage.ejs
+++ b/io_prj_server/views/frontpage.ejs
@@ -8,6 +8,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script type="module" src="/javascripts/refresh_jwt.js"></script>
   <script type="module" src="/javascripts/infinite_scroll.js"></script>
+  <script src="/javascripts/notifications.js"></script>
 </head>
 
 <body>
@@ -26,6 +27,7 @@
           <% } else { %>
             <li><a href="/profile" class="blue-button">Profil</a></li>
             <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
+            <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell" class="notification-bell"></a></li>
             <% } %>
       </ul>
     </nav>
@@ -49,6 +51,7 @@
         </section>
         <aside>
         </aside>
+        <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
       </main>
 </body>
 
