--- a/io_prj_server/views/profile.ejs
+++ b/io_prj_server/views/profile.ejs
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/profile-style.css' />
     <script type="module" src="/javascripts/refresh_jwt.js"></script>
     <script type="module" src="/javascripts/infinite_scroll.js"></script>
+    <script type="module" src="/javascripts/display_my_projects.js"></script>
+    <script src="/javascripts/notifications.js"></script>
 </head>
 <body>
     <header>
@@ -23,6 +25,7 @@
             <% } else { %>
               <li><a href="/profile" class="blue-button">Profil</a></li>
               <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
+              <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell" class="notification-bell"></a></li>
               <% } %>
         </ul>
       </nav>
@@ -36,34 +39,24 @@
                   <div class="profile-info">
                       <h2><%= user.name %></h2>
                   </div>
-                  <button class="message-button">Napisz</button>
               </div>
               <div class="profile-content">
-                  <section class="about-me">
-                      <h3>O mnie</h3>
+                  <section class="join-date">
+                      <h3>Data dołączenia</h3>
                       <div class="line"></div>
-                      <p><%= user.about %></p>
+                      <p><%= user.join_date %></p>
                   </section>
-                  <section class="preferred-technologies">
-                      <h3>Preferowane technologie</h3>
-                      <div class="line"></div>
-                      <p><%= user.preferredTechnologies %></p>
-                  </section>
-                  <section class="own-projects">
-                      <h3>Projekty autorskie</h3>
-                      <div class="line"></div>
-                      <p><%= user.ownProjects %></p>
-                  </section>
-                  <section class="participated-projects">
-                      <h3>Projekty w których uczestniczę</h3>
-                      <div class="line"></div>
-                      <p><%= user.participatedProjects %></p>
+                  <section class="email">
+                    <h3>Email Użytkownika</h3>
+                    <div class="line"></div>
+                    <p><%= user.email %></p>
                   </section>
               </div>
           </div>
           <aside>
               <div class="sidebar-placeholder"></div>
           </aside>
+          <div id="notifications-container" style="display: none; position: fixed; top: 200px; right: 550px;"></div>
       </div>
   </main>
 </body>      
