--- a/io_prj_server/views/faq.ejs
+++ b/io_prj_server/views/faq.ejs
@@ -26,7 +26,8 @@
                     <% } else { %>
                         <li><a href="/profile" class="blue-button">Profil</a></li>
                         <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
-                        <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell" class="notification-bell"></a></li>
+                        <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell"
+                                    class="notification-bell"></a></li>
                         <% } %>
             </ul>
         </nav>
@@ -65,7 +66,7 @@
             </div>
             <div class="tresc-box">
                 <label for="message">Treść wiadomości:</label><br>
-                <textarea id="message"  style="height: 150px;" name="message"></textarea>
+                <textarea id="message" style="height: 150px;" name="message"></textarea>
             </div>
             <a href="/send" class="blue-button">Wyślij</a>
         </section>
