--- a/io_prj_server/views/project_create.ejs
+++ b/io_prj_server/views/project_create.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
   <meta charset="UTF-8">
   <title>Stwórz Projekt</title>
@@ -11,6 +12,7 @@
   <script type="module" src="/javascripts/project_publish.js"></script>
   <script src="/javascripts/notifications.js"></script>
 </head>
+
 <body>
   <header>
     <div id="brand">
@@ -24,11 +26,12 @@
         <% if (user.is_guest) { %>
           <li><a href="/user/login" class="blue-button">Zaloguj się</a></li>
           <li><a href="/user/register" class="blue-button">Zarejestruj się</a></li>
-        <% } else { %>
-          <li><a href="/profile" class="blue-button">Profil</a></li>
-          <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
-          <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell" class="notification-bell"></a></li>
-        <% } %>
+          <% } else { %>
+            <li><a href="/profile" class="blue-button">Profil</a></li>
+            <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
+            <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell"
+                  class="notification-bell"></a></li>
+            <% } %>
       </ul>
     </nav>
   </header>
@@ -42,86 +45,93 @@
         </ul>
       </nav>
     </div>
-  <% } %>
-  <section id="form" class="create_form">
-    <h1>Stwórz projekt</h1>
-    <label for="title">Tytuł:</label><br>
-    <div class="title-box">
-      <textarea id="title" name="title" class="input-field" rows="1" maxlength="50"></textarea>
-    </div>
-    <label for="expectations">Oczekiwania:</label><br>
-    <div class="expectations-box">
-      <textarea id="expectations" name="expectations" class="input-field" rows="1" maxlength="300"></textarea>
-    </div>
-    <label for="detailed-desc">Szczegółowy opis projektu:</label><br>
-    <div class="detailed-desc-box">
-      <textarea id="description" name="description" class="input-field" rows="1" maxlength="2000"></textarea>
-    </div>
+    <% } %>
+      <section id="form" class="create_form">
+        <h1>Stwórz projekt</h1>
+        <label for="title">Tytuł:</label><br>
+        <div class="title-box">
+          <textarea id="title" name="title" class="input-field" rows="1" maxlength="50"></textarea>
+        </div>
+        <label for="expectations">Oczekiwania:</label><br>
+        <div class="expectations-box">
+          <textarea id="expectations" name="expectations" class="input-field" rows="1" maxlength="300"></textarea>
+        </div>
+        <label for="detailed-desc">Szczegółowy opis projektu:</label><br>
+        <div class="detailed-desc-box">
+          <textarea id="description" name="description" class="input-field" rows="1" maxlength="2000"></textarea>
+        </div>
 
-    <label for="language">Dodaj język programowania:</label><br>
-    <select id="language" class="databox" multiple="multiple">
-        <% tags.language.forEach(tag => { %>
-          <option value="<%= tag.tag_id %>"><%= tag.tag_name %></option>
-        <% }) %>
-    </select><br>
+        <label for="language">Dodaj język programowania:</label><br>
+        <select id="language" class="databox" multiple="multiple">
+          <% tags.language.forEach(tag=> { %>
+            <option value="<%= tag.tag_id %>">
+              <%= tag.tag_name %>
+            </option>
+            <% }) %>
+        </select><br>
 
-    <label for="technology">Dodaj technologię:</label><br>
-    <select id="technology" class="databox" multiple="multiple">
-        <% tags.technology.forEach(tag => { %>
-          <option value="<%= tag.tag_id %>"><%= tag.tag_name %></option>
-        <% }) %>
+        <label for="technology">Dodaj technologię:</label><br>
+        <select id="technology" class="databox" multiple="multiple">
+          <% tags.technology.forEach(tag=> { %>
+            <option value="<%= tag.tag_id %>">
+              <%= tag.tag_name %>
+            </option>
+            <% }) %>
 
-    </select><br>
+        </select><br>
 
-    <label for="license">Dodaj licencję:</label><br>
-    <select id="license" class="databox" multiple="multiple">
-        <% tags.license.forEach(tag => { %>
-          <option value="<%= tag.tag_id %>"><%= tag.tag_name %></option>
-        <% }) %>
-    </select>
-  </section>
-  <button class="large-blue-button" onclick="project_publish()">Publikuj projekt</button>
-  <div class="error-message" id="error"></div>
+        <label for="license">Dodaj licencję:</label><br>
+        <select id="license" class="databox" multiple="multiple">
+          <% tags.license.forEach(tag=> { %>
+            <option value="<%= tag.tag_id %>">
+              <%= tag.tag_name %>
+            </option>
+            <% }) %>
+        </select>
+      </section>
+      <button class="large-blue-button" onclick="project_publish()">Publikuj projekt</button>
+      <div class="error-message" id="error"></div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('#language').select2({
-        placeholder: 'Wybierz język programowania',
-        allowClear: true
-      });
-      $('#technology').select2({
-        placeholder: 'Wybierz technologię',
-        allowClear: true
-      });
-      $('#license').select2({
-        placeholder: 'Wybierz licencję',
-        allowClear: true
-      });
-    });
-  </script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+      <script>
+        $(document).ready(function () {
+          $('#language').select2({
+            placeholder: 'Wybierz język programowania',
+            allowClear: true
+          });
+          $('#technology').select2({
+            placeholder: 'Wybierz technologię',
+            allowClear: true
+          });
+          $('#license').select2({
+            placeholder: 'Wybierz licencję',
+            allowClear: true
+          });
+        });
+      </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/autosize@5.0.1/dist/autosize.min.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      autosize(document.querySelectorAll('textarea.input-field'));
+      <script src="https://cdn.jsdelivr.net/npm/autosize@5.0.1/dist/autosize.min.js"></script>
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+          autosize(document.querySelectorAll('textarea.input-field'));
 
-      document.querySelectorAll('textarea.input-field').forEach(function (textarea) {
-        textarea.style.maxHeight = '100px';
-      });
+          document.querySelectorAll('textarea.input-field').forEach(function (textarea) {
+            textarea.style.maxHeight = '100px';
+          });
 
-      document.querySelectorAll('textarea.input-field').forEach(function (textarea) {
-        var maxLength = parseInt(textarea.getAttribute('maxlength'));
-        if (maxLength) {
-          textarea.addEventListener('input', function () {
-            if (textarea.value.length > maxLength) {
-              textarea.value = textarea.value.slice(0, maxLength);
+          document.querySelectorAll('textarea.input-field').forEach(function (textarea) {
+            var maxLength = parseInt(textarea.getAttribute('maxlength'));
+            if (maxLength) {
+              textarea.addEventListener('input', function () {
+                if (textarea.value.length > maxLength) {
+                  textarea.value = textarea.value.slice(0, maxLength);
+                }
+              });
             }
           });
-        }
-      });
-    });
-  </script>
+        });
+      </script>
 </body>
+
 </html>
