--- a/io_prj_server/views/about.ejs
+++ b/io_prj_server/views/about.ejs
@@ -26,7 +26,8 @@
                     <% } else { %>
                         <li><a href="/profile" class="blue-button">Profil</a></li>
                         <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
-                        <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell" class="notification-bell"></a></li>
+                        <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell"
+                                    class="notification-bell"></a></li>
                         <% } %>
             </ul>
         </nav>
