--- a/io_prj_server/public/stylesheets/notification.css
+++ b/io_prj_server/public/stylesheets/notification.css
@@ -1,9 +1,11 @@
 .notification {
-    position: absolute;
+    position: relative;
     width: 500px;
-    height: 106px;
     background: #F4F4F4;
     border-radius: 21px;
+    margin: 10px 0;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .notification p {
@@ -42,8 +44,14 @@
 
 .notification-text {
     padding: 10px;
-    word-wrap: break-word; /* Allows long words to be broken and wrapped to the next line */
-    white-space: normal; /* Allows text to wrap to the next line */
-    max-width: 100%; /* Ensures the text stays within the parent div */
-    display: block; /* Ensures the block formatting context */
+    word-wrap: break-word;
+    white-space: normal;
+    max-width: 100%;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.notification a {
+    color: white;
+    text-decoration: none;
 }
