--- a/io_prj_server/public/stylesheets/style.css
+++ b/io_prj_server/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 @import "notification.css";
 
-body,
-html {
+body, html {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -10,11 +9,16 @@ html {
 }
 
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f4f4f4;
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
-  background-color: #f4f4f4;
 }
 
 #brand h1 {
@@ -62,6 +66,7 @@ main {
   display: flex;
   justify-content: space-between;
   padding: 40px;
+  margin-top: 100px; /* margin-top ustawiłem na 100px, aby treść nie była zakrywana przez nagłówek */
 }
 
 #content {
@@ -78,7 +83,6 @@ main {
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
-
 }
 
 .post-title {
@@ -94,134 +98,6 @@ aside {
   padding: 30px;
   background-color: #f4f4f4;
   border-radius: 44px;
-  position: relative;
-  height: 664px;
-}
-
-footer {
-  padding: 20px;
-  background-color: #f4f4f4;
-}
-
-.logged-buttons {
-  padding: 10px;
-  padding-left: 30px;
-  margin-top: 10px;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-
-body,
-html {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background: #ffffff;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 40px;
-  background-color: #f4f4f4;
-}
-
-#brand h1 {
-  font-size: 48px;
-  color: #007bff;
-  font-family: 'Trebuchet MS', sans-serif;
-  margin: 0;
-}
-
-nav ul {
-  display: flex;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li {
-  padding: 0 10px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #333;
-  font-size: 14px;
-}
-
-nav ul li a.blue-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border-radius: 5px;
-  text-align: center;
-}
-
-a.blue-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  border-radius: 5px;
-  text-align: center;
-}
-
-a.blue-button:hover {
-  background-color: #0056b3;
-}
-
-nav ul li a.blue-button:hover {
-  background-color: #0056b3;
-}
-
-main {
-  display: flex;
-  justify-content: space-between;
-  padding: 40px;
-}
-
-.faq {
-  display: flex;
-  flex-direction: column;
-  padding: 40px;
-}
-
-.create_form {
-  display: flex;
-  flex-direction: column;
-  padding: 40px;
-}
-
-#content {
-  width: 70%;
-}
-
-.post {
-  background-color: #fafaf5;
-  border-radius: 10px;
-  padding: 40px;
-  margin-bottom: 20px;
-  border: solid;
-  border-color: #e6e6e6;
-
-}
-
-.post-title {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-aside {
-  width: 25%;
-  flex-direction: column;
-  padding: 30px;
-  background-color: #d9d9d9;
-  border-radius: 10px;
 }
 
 footer {
@@ -267,7 +143,6 @@ nav ul li a:hover {
   line-height: 130%;
   text-align: center;
 }
-
 
 #form h1 {
   text-align: center;
@@ -323,9 +198,6 @@ nav ul li a:hover {
   max-width: 100px;
   height: auto;
 }
-
-
-
 
 .project-container {
   border: 1px solid #ddd;
@@ -397,7 +269,6 @@ hr {
   text-align: center;
 }
 
-
 #email,
 #topic {
   background-color: #fafaf5;
@@ -429,9 +300,7 @@ hr {
   resize: none;
 }
 
-
-
-label {
+.label {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
