--- a/io_prj_server/views/frontpage.ejs
+++ b/io_prj_server/views/frontpage.ejs
@@ -27,8 +27,9 @@
           <% } else { %>
             <li><a href="/profile" class="blue-button">Profil</a></li>
             <li><a href="/user/logout" class="blue-button">Wyloguj się</a></li>
-            <li> <a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell"
-                  class="notification-bell"></a></li>
+            <li><a href="#" onclick="toggleNotifications()"><img src="/images/bell.png" alt="bell" class="notification-bell"></a></li>
+            <li></li>
+            <li></li>
             <% } %>
       </ul>
     </nav>
